test/mpi/errors/datatype/Makefile.sm
INCLUDES = -I../../include -I${srcdir}/../../include
LDADD = ../../util/mtest.o
DEPADD = @MPILIBLOC@
smvar_do_sharedlibs = 0

# Use extra programs to list programs that should not be built by default.
EXTRA_PROGRAMS       = 

getcnterr_SOURCES    = getcnterr.c

../../util/mtest.o:
	(cd ../../util && $(MAKE) mtest.o)
